# Cpp-resource-injector

./: CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: cmake.yml
cmake/: resource-injectorConfig.cmake.in
cmake/injector/: Injector.cmake
cmake/injector/compiler-dependent/: GetASM.cmake  apple-clang.S.in  clang.S.in  gcc.S.in
cmake/injector/impl/: CodeGenerator.cmake  FileUtils.cmake  InjectorImpl.cmake  TargetUtils.cmake
conan/: conanfile.py
example/: CMakeLists.txt  main.cpp
include/injector/: injector.hpp
include/injector/detail/: from_chars.h  stream.h
test/: CMakeLists.txt  tests.cpp
test/resources/: test_resource1.txt  test_resource2.txt  test_resource3.txt  test_resource_fibonacci.binary
